# sinen

./: .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .luarc.json  .luaurc  3  404.html  AGENTS.md  Android.mk  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  LICENSE.md  Makefile  README.md  _actor_8hpp_source.html  _asset_reader_8hpp_source.html  _asset_type_8hpp_source.html  _billboard_component_8hpp_source.html  _button_8hpp_source.html  _circle_component_8hpp_source.html  _collision_8hpp_source.html  _color_8hpp_source.html  _component_8hpp_source.html  _dialog_box_8hpp_source.html  _draw2_d_component_8hpp_source.html  _draw3_d_component_8hpp_source.html  _draw_object_8hpp_source.html  _effect_8hpp_source.html  _effect_component_8hpp_source.html  _font_8hpp_source.html  _game_controller_8hpp_source.html  _game_controller_button_8hpp_source.html  _h_u_d_8hpp_source.html  _input_component_8hpp_source.html  _input_system_8hpp_source.html  (+461 more)
Emscripten/: CMakeLists.txt
converter/: CMakeLists.txt
demo/: CMakeLists.txt  settings.json  shell_minimum.html
demo/android-project/: local.properties
demo/native/: corridor.cpp  corridor.hpp
demo/script/: scene_switcher.lua
demo/src/: main.cpp
editor/: CMakeLists.txt  imgui.ini  layout.ini  run.py
editor/native/: custom_logger.cpp  editor.cpp  editor.hpp  glsl_editor.cpp  main.cpp  markdown.cpp  markdown.hpp  texteditor.cpp  texteditor.hpp
editor/script/: default.lua
editor/src/: custom_logger.cpp  custom_logger.hpp  editor.cpp  editor.hpp  file_dialog.cpp  file_dialog.hpp  log_window.cpp  main.cpp  markdown.cpp  texteditor.cpp  texteditor.hpp
example/: CMakeLists.txt  main.cpp  run.py  shell_minimum.html
example/android-project/: gradle.properties
example/script/: calc_input_vector.lua  get_forward.lua
example/src/: main.cpp
game/: CMakeLists.txt  design.md  readme.md  settings.json
game/script/: scene00_base.lua  scene01_stage.lua
game/src/: corridor.cpp  corridor.hpp  dungeon_generator.cpp  main.cpp  room.hpp
script/: CMakeLists.txt
script/src/: register_component.cpp  register_drawable.cpp  register_generator.cpp  register_script.hpp  register_table.cpp  script.cpp
src/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp  main_system.cpp  main_system.hpp  sinen.cpp  sinen.hpp  sinen.lua
src/actor/: actor.cpp
src/allocator/: stack_allocator.cpp
src/asset/: asset.hpp
src/audio/: CMakeLists.txt  audio.cpp  audio.hpp  music.cpp  music_system.cpp  sound.cpp  sound.hpp  sound_event.cpp  sound_system.cpp  sound_system.hpp  synth.cpp  synth.hpp
src/camera/: camera.cpp
src/color/: color.cpp  hsv.cpp
src/component/: component.cpp  component_factory.cpp  draw3d_component.cpp  move_component.cpp  rigidbody_component.cpp  script_component.cpp  shader_component.cpp
src/compute/: CMakeLists.txt  compute.cpp  compute.hpp  compute_buffer.cpp  compute_buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp
src/core/: CMakeLists.txt  core.hpp  profiler.hpp
src/draw_object/: draw_object_wrapper.cpp
src/drawable/: drawable.cpp  drawable_wrapper.cpp
src/editor/: CMakeLists.txt
src/event/: current_event.hpp  event_system.cpp  event_system.hpp
src/font/: font.cpp  font_system.cpp  font_system.hpp
src/geometry/: bbox.cpp  bbox.hpp  box.cpp  box.hpp  mesh.cpp  mesh.hpp  rect.cpp  rect.hpp  vertex.hpp
src/gpu/: CMakeLists.txt  builtin_shader.cpp  gpu.cpp  gpu.hpp  gpu_backend_api.hpp  gpu_buffer.hpp  gpu_command_buffer.hpp  gpu_compute_pass.hpp  gpu_compute_pipeline.hpp  gpu_copy_pass.hpp  gpu_device.hpp  gpu_graphics_pipeline.hpp  gpu_render_pass.hpp  gpu_sampler.hpp  gpu_shader.hpp  gpu_texture.hpp  raytracing.cpp  raytracing.hpp  shader.cpp  shader.hpp  shader_bundle.cpp  shader_bundle.hpp  shader_format.cpp  shader_stage.cpp
src/graph/: bfs.cpp  bfs_grid.cpp
src/graphics/: CMakeLists.txt  builtin_pipeline.cpp  builtin_pipeline.hpp  graphics.cpp  graphics.hpp  graphics_lua.cpp  graphics_pipeline.cpp  graphics_pipeline.hpp  graphics_system.cpp  graphics_system.hpp  text_style.hpp  uniform_data.hpp
src/gui/: CMakeLists.txt  gui.cpp  gui.hpp
src/input/: game_controller.cpp  game_controller.hpp  input.cpp  input_system.cpp  input_system.hpp
src/instancing/: instancing.cpp  instancing_wrapper.cpp
src/io/: data_stream.cpp  dstream.cpp  file.cpp  json.cpp
src/logger/: logger.cpp
src/main/: get_system.cpp  get_system.hpp  main_system.cpp  main_system.hpp
src/manager/: get_system.hpp  manager.cpp  manager.hpp
src/math/: CMakeLists.txt  mat4.cpp  mat4.hpp  math.cpp  math.hpp  matrix.hpp  matrix4.cpp  periodic.cpp  periodic.hpp  quaternion.cpp  quaternion.hpp  random.cpp  random.hpp  random_system.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp  vector.cpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/model/: model.cpp
src/nen/: AudioEvent.cpp  AudioSystem.cpp  DebugLog.cpp  Effect.cpp  Font.cpp  InputSystem.cpp  Logger.cpp  Math.cpp  ObjLoader.cpp  Random.cpp  Renderer.cpp  Script.cpp  Texture.cpp  Transform.cpp  Transition.cpp  VertexArray.cpp  Window.cpp
src/network/: tcp.cpp  tcp_client.cpp  tcp_socket.cpp
src/physics/: CMakeLists.txt  collider.cpp  collider.hpp  collider_lua.cpp  collision.cpp  collision.hpp  physics.cpp  physics.hpp  physics_system.cpp  physics_system.hpp  primitive2.hpp  primitive3.cpp  primitive3.hpp  world.hpp  world3d.hpp
src/platform/: CMakeLists.txt
src/render/: px_renderer.cpp  px_renderer.hpp  render_pipeline.cpp  render_system.cpp  render_system.hpp  renderer.cpp
src/rt_shader_compiler/: CMakeLists.txt  test.slang
src/scene/: scene.cpp  scene_system.cpp  scene_system.hpp
src/script/: CMakeLists.txt  binding.cpp  binding.hpp  luaapi.hpp  register_drawable.cpp  register_generator.cpp  register_graph.cpp  register_keycode.cpp  register_script.hpp  register_table.cpp  require.cpp  require.hpp  script.cpp  script.hpp  (+2 more)
test/: CMakeLists.txt  allocator_test.cpp  global.luau  grid_test.cpp  main.luau
usertype/: CMakeLists.txt
viewer/: CMakeLists.txt  run.py  settings.json
(+3445 files in other folders)
